# mcp-infragraph

./: .env.example  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  infragraph_ingest_docs.py  pyproject.toml
docs/superpowers/plans/: 2026-03-25-contextual-retrieval-upgrades.md
infragraph/: config.py  embedding.py  ontology.py  session_store.py
infragraph/extraction/: extractor.py  schema.py
infragraph/ingestion/: chunker.py  context_header.py  ocr.py  pipeline.py  scanner.py
infragraph/mcp/: server.py
infragraph/normalization/: dedup.py  writer.py
infragraph/retrieval/: bm25.py  graph.py  hybrid.py  semantic.py
infragraph/storage/: neo4j.py  qdrant.py
scripts/: query.py
tests/: test_bm25.py  test_context_header.py  test_mcp_server.py  test_neo4j.py  test_qdrant.py  test_session_store.py
