[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infragraph"
version = "0.1.0"
description = "Infrastructure knowledge graph with hybrid Neo4j + Qdrant RAG"
requires-python = ">=3.11"
dependencies = [
    # Data layer
    "neo4j>=5.20",
    "qdrant-client>=1.16,<1.17",
    "numpy<2.0",
    # Embeddings via OpenRouter (no local PyTorch needed)
    # OpenRouter / LLM calls
    "httpx>=0.27",
    "tenacity>=8.3",
    # Schema & config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # MCP server (stdio + SSE/HTTP transport)
    "mcp>=1.2",
    "uvicorn>=0.30",
    "starlette>=0.40",
    # Text processing
    "tiktoken>=0.7",
    "rank-bm25>=0.2",
    "redis>=5.0",
    "chardet>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
infragraph-query  = "scripts.query:app"
infragraph-mcp    = "infragraph.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["infragraph", "scripts"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
